--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ sphinx-copybutton = "^0.5.1"
 nbconvert = "^7.4.0"
 nbdoc = "^0.0.82"
 
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
